- Added mock service for terminology service - Updated all mock services to represent they systems currently implemented for RHEA

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,5 @@
-#** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Jul 24 13:38:11 SAST 2012
+#Tue Nov 06 14:31:21 SAST 2012
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=clientregistrymock.xml,facilityregistrymock.xml,professionalregistrymock.xml,rapidsmsmock.xml,sharedhealthrecordmock.xml
 domain=default
+config.resources=clientregistrymock.xml,facilityregistrymock.xml,professionalregistrymock.xml,rapidsmsmock.xml,sharedhealthrecordmock.xml,terminologyservicemock.xml
